pipeline/cd-pipeline/users/userA/api1/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api1
  labels:
    app: api1
spec:
  replicas: ${REPLICAS}
  selector:
    matchLabels:
      app: api1
  template:
    metadata:
      labels:
        app: api1
    spec:
      containers:
        - name: api1
          image: ${IMAGE_NAME}
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "${CPU_REQUEST}"
              memory: "${MEMORY_REQUEST}"
            limits:
              cpu: "${CPU_LIMIT}"
              memory: "${MEMORY_LIMIT}"
